--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>COMP392-Lesson4-Azure</title>
+		<title>Riml/COMP392-Lab3</title>
 		<!-- CSS Section -->
 		<link rel="stylesheet" href="Content/app.css">
 	</head>
