--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <meta charset ="UTF-8">;
 		<title>Riml/COMP392-Lab3</title>
 		<!-- CSS Section -->
 		<link rel="stylesheet" href="Content/app.css">
